--- a/config_contexts/sites/dublin.yaml
+++ b/config_contexts/sites/dublin.yaml
@@ -3,6 +3,7 @@ _metadata":
   weight: 1000
   description: "Data for Dublin"
   is_active: true
+  sites: [{"slug": "dublin"}]
   schema: ""
 
 vlans:
