--- a/config_contexts/sites/europe.yaml
+++ b/config_contexts/sites/europe.yaml
@@ -1,3 +1,11 @@
+_metadata":
+  name: "Europe devices"
+  weight: 1000
+  description: "Data for Europe"
+  is_active: true
+  regions: [{"slug": "europe"}]
+  schema: ""
+
 management_interface: "mgmt0"
 logging:
   source_intf: "mgmt0"
