--- a/config_contexts/regions/europe.yaml
+++ b/config_contexts/regions/europe.yaml
@@ -23,10 +23,24 @@ ntp:
     - "172.16.10.33"
 aaa_servers:
   - name: "Aaa1"
-    type: "tacacs+"
+    type: "radius"
     host: "10.1.1.130"
     cipher: "secret1"
   - name: "Aaa2"
-    type: "tacacs+"
+    type: "radius"
     host: "10.3.1.130"
     cipher: "secret2"
+access_lists:
+  - name: "WAYNE_NTP"
+    type: "standard"
+    entries:
+      - dst_ip: "10.4.1.1"
+        dst_port: ""
+        src_ip: ""
+        src_port: ""
+        comment: ""
+      - dst_ip: "10.4.2.1"
+        dst_port: ""
+        src_ip: ""
+        src_port: ""
+        comment: ""        
