--- a/config_contexts/regions/europe.yaml
+++ b/config_contexts/regions/europe.yaml
@@ -19,8 +19,8 @@ dns:
 ntp:
   source_intf: "mgmt0"
   servers:
-    - "10.16.10.22"
-    - "10.16.10.33"
+    - "dub.ntc.test"
+    - "dub.ntc.test"
 aaa_servers:
   - name: "Aaa1"
     type: "radius"
@@ -34,12 +34,12 @@ access_lists:
   - name: "WAYNE_NTP"
     type: "standard"
     entries:
-      - dst_ip: "10.4.1.1"
+      - dst_ip: "10.1.1.129"
         dst_port: ""
         src_ip: ""
         src_port: ""
         comment: ""
-      - dst_ip: "10.4.2.1"
+      - dst_ip: "10.1.128.129"
         dst_port: ""
         src_ip: ""
         src_port: ""
